Add a CiviMail block to the bottom of the template

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -1449,6 +1449,54 @@
   <!-- /socialBlock -->
 
   </div>
+
+<!-- civimailBlock -->
+  <div data-ko-display="preheaderVisible" data-ko-wrap="false">
+
+  <table class="vb-outer" width="100%" cellpadding="0" border="0" cellspacing="0" bgcolor="#ffffff"
+    style="background-color: #ffffff;" data-ko-block="civimailBlock">
+    <tr>
+      <td class="vb-outer" align="center" valign="top" bgcolor="#ffffff"
+        style="background-color: #ffffff;">
+
+<!--[if (gte mso 9)|(lte ie 8)]><table align="center" border="0" cellspacing="0" cellpadding="0" width="570"><tr><td align="center" valign="top"><![endif]-->
+        <div class="oldwebkit">
+        <table width="570" border="0" cellpadding="0" cellspacing="9" class="vb-container halfpad" bgcolor="#ffffff"
+          style="width: 100%; max-width: 570px; background-color: #ffffff;">
+          <tr>
+            <td valign="top" bgcolor="#ffffff" style="background-color: #ffffff;" align="center">
+              <table width="100%" cellspacing="0" cellpadding="0" border="0" style="width:100%;">
+                <tr>
+                  <td align="left" valign="top" style="text-align: left; font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #919191;" class="long-text links-color">
+                     &nbsp;<br/>
+                     &nbsp;<br/>
+                  </td>
+                </tr>
+                <tr>
+                  <td align="left" valign="top" style="text-align: left; font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #919191;" class="long-text links-color">
+                     This email was sent to: {contact.display_name}<br/>
+                     <br/>
+                     <a href="{action.unsubscribeUrl}">Stop</a> receiving emails on this topic<br/>
+                     or <a href="{action.optOutUrl}">never receive</a> bulk emails from us again
+                  </td>
+                  <td align="left" valign="top" style="text-align: left; font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #919191;" class="long-text links-color">
+                    Head office:<br/>
+                    {domain.address}
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+        </table>
+        </div>
+<!--[if (gte mso 9)|(lte ie 8)]></td></tr></table><![endif]-->
+      </td>
+    </tr>
+  </table>
+
+  </div>
+  <!-- /civimailBlock -->
+
   </center>
 </body>
 </html>
