Set socialBlock background to match colour of CBF logo image for the footer: #333333

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -1320,10 +1320,10 @@
   <!-- /spacerBlock -->
 
   <!-- socialBlock -->
-  <table width="100%" cellpadding="0" border="0" cellspacing="0" bgcolor="#3f3f3f"
-    style="background-color: #3f3f3f;"  data-ko-block="socialBlock">
+  <table width="100%" cellpadding="0" border="0" cellspacing="0" bgcolor="#333333"
+    style="background-color: #333333;"  data-ko-block="socialBlock">
     <tr>
-      <td align="center" valign="top" bgcolor="#3f3f3f" style="background-color: #3f3f3f;">
+      <td align="center" valign="top" bgcolor="#333333" style="background-color: #333333;">
 <!--[if (gte mso 9)|(lte ie 8)]><table align="center" border="0" cellspacing="0" cellpadding="0" width="570"><tr><td align="center" valign="top"><![endif]-->
         <div class="oldwebkit">
         <table width="570" style="width: 100%; max-width: 570px" border="0" cellpadding="0" cellspacing="9" class="vb-row fullpad" align="center">
