--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -616,7 +616,7 @@
               </td>
             </tr>
             <tr data-ko-display="titleVisible">
-              <td height="9" style="font-size:1px; line-height: 1px;">&nbsp;</td>
+              <td height="9" style="font-size:1px; line-height: 1px;">&ensp;</td>
             </tr>
             <tr>
               <td align="left" style="text-align: left; font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;"
@@ -625,7 +625,7 @@
               </td>
             </tr>
             <tr data-ko-display="buttonVisible">
-              <td height="13" style="font-size:1px; line-height: 1px;">&nbsp;</td>
+              <td height="13" style="font-size:1px; line-height: 1px;">&ensp;</td>
             </tr>
             <tr data-ko-display="buttonVisible">
               <td valign="top">
@@ -1009,7 +1009,7 @@
                 style="width:100%; -ko-width: @[hrStyle.hrWidth]%; -ko-attr-width: @[hrStyle.hrWidth]%">
                 <tr>
                   <td width="100%" height="1" style="font-size:1px; line-height: 1px; width: 100%; background-color: #3f3f3f;
-                  -ko-background-color: @hrStyle.color; -ko-attr-height: @hrStyle.hrHeight; -ko-line-height: @[hrStyle.hrHeight]px">&nbsp;</td>
+                  -ko-background-color: @hrStyle.color; -ko-attr-height: @hrStyle.hrHeight; -ko-line-height: @[hrStyle.hrHeight]px">&ensp;</td>
                 </tr>
               </table>
             </td>
@@ -1314,7 +1314,7 @@
     <tr>
       <td class="vb-outer" valign="top" align="center" bgcolor="#ffffff" height="24"
         style="-ko-attr-height: @spacerSize; height: 24px; -ko-height: @[spacerSize]px; background-color: #ffffff; -ko-background-color: @externalBackgroundColor;
-        -ko-attr-bgcolor: @externalBackgroundColor; font-size:1px; line-height: 1px;">&nbsp;</td>
+        -ko-attr-bgcolor: @externalBackgroundColor; font-size:1px; line-height: 1px;">&ensp;</td>
     </tr>
   </table>
   <!-- /spacerBlock -->
@@ -1355,78 +1355,78 @@
                     <table class="vb-content" border="0" cellspacing="9" cellpadding="0" width="276" style="width: 100%" align="right">
                       <tr>
                         <td align="right" valign="middle" class="links-color socialLinks mobile-textcenter" data-ko-display="socialIconType eq 'colors'">
-                          <span data-ko-display="fbVisible" data-ko-wrap="false">&nbsp;</span>
+                          <span data-ko-display="fbVisible" data-ko-wrap="false">&ensp;</span>
                           <a data-ko-display="fbVisible" href="" style="-ko-attr-href: @fbUrl">
                             <img src="img/social_def/facebook_ok.png" alt="Facebook" border="0" class="socialIcon" />
                           </a>
-                          <span data-ko-display="twVisible" data-ko-wrap="false">&nbsp;</span>
+                          <span data-ko-display="twVisible" data-ko-wrap="false">&ensp;</span>
                           <a data-ko-display="twVisible" href="" style="-ko-attr-href: @twUrl">
                             <img src="img/social_def/twitter_ok.png" alt="Twitter" border="0" class="socialIcon" />
                           </a>
-                          <span data-ko-display="ggVisible" data-ko-wrap="false">&nbsp;</span>
+                          <span data-ko-display="ggVisible" data-ko-wrap="false">&ensp;</span>
                           <a data-ko-display="ggVisible" href="" style="-ko-attr-href: @ggUrl">
                             <img src="img/social_def/google+_ok.png" alt="Google+" border="0" class="socialIcon" />
                           </a>
-                          <span data-ko-display="webVisible" data-ko-wrap="false" style="display: none">&nbsp;</span>
+                          <span data-ko-display="webVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
                           <a data-ko-display="webVisible" href="" style="-ko-attr-href: @webUrl; display: none">
                             <img src="img/social_def/web_ok.png" alt="Web" border="0" class="socialIcon" />
                           </a>
-                          <span data-ko-display="inVisible" data-ko-wrap="false" style="display: none">&nbsp;</span>
+                          <span data-ko-display="inVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
                           <a data-ko-display="inVisible" href="" style="-ko-attr-href: @inUrl; display: none">
                             <img src="img/social_def/linkedin_ok.png" alt="Linkedin" border="0" class="socialIcon" />
                           </a>
-                          <span data-ko-display="flVisible" data-ko-wrap="false" style="display: none">&nbsp;</span>
+                          <span data-ko-display="flVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
                           <a data-ko-display="flVisible" href="" style="-ko-attr-href: @flUrl; display: none">
                             <img src="img/social_def/flickr_ok.png" alt="Flickr" border="0" class="socialIcon" />
                           </a>
-                          <span data-ko-display="viVisible" data-ko-wrap="false" style="display: none">&nbsp;</span>
+                          <span data-ko-display="viVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
                           <a data-ko-display="viVisible" href="" style="-ko-attr-href: @viUrl; display: none">
                             <img src="img/social_def/vimeo_ok.png" alt="Vimeo" border="0" class="socialIcon" />
                           </a>
-                          <span data-ko-display="instVisible" data-ko-wrap="false" style="display: none">&nbsp;</span>
+                          <span data-ko-display="instVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
                           <a data-ko-display="instVisible" href="" style="-ko-attr-href: @instUrl; display: none">
                             <img src="img/social_def/instagram_ok.png" alt="Instagram" border="0"  class="socialIcon" />
                           </a>
-                          <span data-ko-display="youVisible" data-ko-wrap="false" style="display: none">&nbsp;</span>
+                          <span data-ko-display="youVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
                           <a data-ko-display="youVisible" href="" style="-ko-attr-href: @youUrl; display: none">
                             <img src="img/social_def/youtube_ok.png" alt="Youtube" border="0" class="socialIcon" />
                           </a>
                         </td>
                         <td align="right" valign="middle" class="links-color socialLinks mobile-textcenter" data-ko-display="socialIconType eq 'bw'"
                           style="display: none">
-                          <span data-ko-display="fbVisible" data-ko-wrap="false">&nbsp;</span>
+                          <span data-ko-display="fbVisible" data-ko-wrap="false">&ensp;</span>
                           <a data-ko-display="fbVisible" href="" style="-ko-attr-href: @fbUrl">
                             <img src="img/social_def/facebook_bw_ok.png" alt="Facebook" border="0" class="socialIcon" />
                           </a>
-                          <span data-ko-display="twVisible" data-ko-wrap="false">&nbsp;</span>
+                          <span data-ko-display="twVisible" data-ko-wrap="false">&ensp;</span>
                           <a data-ko-display="twVisible" href="" style="-ko-attr-href: @twUrl">
                             <img src="img/social_def/twitter_bw_ok.png" alt="Twitter" border="0" class="socialIcon" />
                           </a>
-                          <span data-ko-display="ggVisible" data-ko-wrap="false">&nbsp;</span>
+                          <span data-ko-display="ggVisible" data-ko-wrap="false">&ensp;</span>
                           <a data-ko-display="ggVisible" href="" style="-ko-attr-href: @ggUrl">
                             <img src="img/social_def/google+_bw_ok.png" alt="Google+" border="0" class="socialIcon" />
                           </a>
-                          <span data-ko-display="webVisible" data-ko-wrap="false" style="display: none">&nbsp;</span>
+                          <span data-ko-display="webVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
                           <a data-ko-display="webVisible" href="" style="-ko-attr-href: @webUrl; display: none">
                             <img src="img/social_def/web_bw_ok.png" alt="Web" border="0" class="socialIcon" />
                           </a>
-                          <span data-ko-display="inVisible" data-ko-wrap="false" style="display: none">&nbsp;</span>
+                          <span data-ko-display="inVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
                           <a data-ko-display="inVisible" href="" style="-ko-attr-href: @inUrl; display: none">
                             <img src="img/social_def/linkedin_bw_ok.png" alt="Linkedin" border="0" class="socialIcon" />
                           </a>
-                          <span data-ko-display="flVisible" data-ko-wrap="false" style="display: none">&nbsp;</span>
+                          <span data-ko-display="flVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
                           <a data-ko-display="flVisible" href="" style="-ko-attr-href: @flUrl; display: none">
                             <img src="img/social_def/flickr_bw_ok.png" alt="Flickr" border="0" class="socialIcon" />
                           </a>
-                          <span data-ko-display="viVisible" data-ko-wrap="false" style="display: none">&nbsp;</span>
+                          <span data-ko-display="viVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
                           <a data-ko-display="viVisible" href="" style="-ko-attr-href: @viUrl; display: none">
                             <img src="img/social_def/vimeo_bw_ok.png" alt="Vimeo" border="0" class="socialIcon" />
                           </a>
-                          <span data-ko-display="instVisible" data-ko-wrap="false" style="display: none">&nbsp;</span>
+                          <span data-ko-display="instVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
                           <a data-ko-display="instVisible" href="" style="-ko-attr-href: @instUrl; display: none">
                             <img src="img/social_def/instagram_bw_ok.png" alt="Instagram" border="0"  class="socialIcon" />
                           </a>
-                          <span data-ko-display="youVisible" data-ko-wrap="false" style="display: none">&nbsp;</span>
+                          <span data-ko-display="youVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
                           <a data-ko-display="youVisible" href="" style="-ko-attr-href: @youUrl; display: none">
                             <img src="img/social_def/youtube_bw_ok.png" alt="Youtube" border="0" class="socialIcon" />
                           </a>
@@ -1468,8 +1468,8 @@
               <table width="100%" cellspacing="0" cellpadding="0" border="0" style="width:100%;">
                 <tr>
                   <td align="left" valign="top" style="text-align: left; font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #919191;" class="long-text links-color">
-                     &nbsp;<br/>
-                     &nbsp;<br/>
+                     &ensp;<br/>
+                     &ensp;<br/>
                   </td>
                 </tr>
                 <tr>
