Change button text to be 'Button' not 'BUTTON'

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -533,7 +533,7 @@
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color;">
                                 <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
-                                  -ko-color: @buttonStyle.color; -ko-attr-href: @buttonLink.url">BUTTON</a>
+                                  -ko-color: @buttonStyle.color; -ko-attr-href: @buttonLink.url">Button</a>
                               </td>
                             </tr>
                           </table>
@@ -623,7 +623,7 @@
                       -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                       -ko-color: @buttonStyle.color; ">
                       <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
-                        -ko-color: @buttonStyle.color; -ko-attr-href: @buttonLink.url">BUTTON</a>
+                        -ko-color: @buttonStyle.color; -ko-attr-href: @buttonLink.url">Button</a>
                     </td>
                   </tr>
                 </table>
@@ -743,7 +743,7 @@
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color; ">
                                 <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
-                                  -ko-color: @buttonStyle.color; -ko-attr-href: @leftButtonLink.url">BUTTON</a>
+                                  -ko-color: @buttonStyle.color; -ko-attr-href: @leftButtonLink.url">Button</a>
                               </td>
                             </tr>
                           </table>
@@ -789,7 +789,7 @@
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color; ">
                                 <a data-ko-editable="middleButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
-                                  -ko-color: @buttonStyle.color; -ko-attr-href: @middleButtonLink.url">BUTTON</a>
+                                  -ko-color: @buttonStyle.color; -ko-attr-href: @middleButtonLink.url">Button</a>
                               </td>
                             </tr>
                           </table>
@@ -835,7 +835,7 @@
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color;">
                                 <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
-                                  -ko-color: @buttonStyle.color; -ko-attr-href: @rightButtonLink.url">BUTTON</a>
+                                  -ko-color: @buttonStyle.color; -ko-attr-href: @rightButtonLink.url">Button</a>
                               </td>
                             </tr>
                           </table>
@@ -909,7 +909,7 @@
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color; ">
                                 <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
-                                  -ko-color: @buttonStyle.color; -ko-attr-href: @leftButtonLink.url">BUTTON</a>
+                                  -ko-color: @buttonStyle.color; -ko-attr-href: @leftButtonLink.url">Button</a>
                               </td>
                             </tr>
                           </table>
@@ -955,7 +955,7 @@
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color; ">
                                 <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
-                                  -ko-color: @buttonStyle.color; -ko-attr-href: @rightButtonLink.url">BUTTON</a>
+                                  -ko-color: @buttonStyle.color; -ko-attr-href: @rightButtonLink.url">Button</a>
                               </td>
                             </tr>
                           </table>
@@ -1032,7 +1032,7 @@
                     -ko-border-radius: @[bigButtonStyle.radius]px;
                     -ko-color: @bigButtonStyle.color; ">
                     <a data-ko-link="link.url" data-ko-editable="link.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
-                      -ko-color: @bigButtonStyle.color;">BUTTON</a>
+                      -ko-color: @bigButtonStyle.color;">Button</a>
                   </td>
                 </tr>
               </table>
