--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -496,7 +496,7 @@
                         <td width="100%" valign="top" align="left" class="links-color">
                           <a data-ko-link="image.url" href="">
                             <img data-ko-editable="image.src" border="0" hspace="0" vspace="0" width="166"
-                              data-ko-placeholder-height="208" class="mobile-full" alt=""
+                              data-ko-placeholder-height="208" class="mobile-full attribute-width-166" alt=""
                               src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C208"
                               style="vertical-align: top; width: 100%; height: auto; -ko-attr-width: @imageWidth; max-width: 166px; -ko-max-width: @[imageWidth]px; -ko-attr-alt: @image.alt" />
                           </a>
@@ -549,8 +549,8 @@
                       <tr>
                         <td width="100%" valign="top" align="left" class="links-color">
                           <a data-ko-link="image.url" href="">
-                            <img data-ko-editable="image.src" border="0" hspace="0" vspace="0" width="166" data-ko-placeholder-height="208" class="mobile-full"
-                              src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C208" class="mobile-full"
+                            <img data-ko-editable="image.src" border="0" hspace="0" vspace="0" width="166" data-ko-placeholder-height="208"
+                              src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C208" class="mobile-full attribute-width-166"
                               alt="" style="vertical-align:top; width: 100%; height: auto; -ko-attr-width: @imageWidth; max-width: 166px; -ko-max-width: @[imageWidth]px; -ko-attr-alt: @image.alt" />
                           </a>
                         </td>
@@ -587,7 +587,7 @@
             <td width="100%" valign="top" align="left" class="links-color">
               <a data-ko-link="image.url" href="">
                 <img data-ko-editable="image.src" border="0" hspace="0" vspace="0" width="534" data-ko-placeholder-height="267"
-                  src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=534%2C267" class="mobile-full"
+                  src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=534%2C267" class="mobile-full attribute-width-534"
                   alt="" style="vertical-align:top; max-width:534px; width: 100%; height: auto;
                   -ko-attr-alt: @image.alt" />
               </a>
@@ -715,7 +715,7 @@
                         <td width="100%" valign="top" align="left" class="links-color" style="padding-bottom: 9px">
                           <a data-ko-link="leftImage.url" href="">
                             <img data-ko-editable="leftImage.src" border="0" hspace="0" vspace="0" width="166" height="83"
-                              src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C83" class="mobile-full"
+                              src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C83" class="mobile-full attribute-width-166"
                              alt="" style="vertical-align:top; width: 100%; height: auto; -ko-attr-height: @imageHeight;
                                -ko-attr-alt: @leftImage.alt" />
                           </a>
@@ -760,7 +760,7 @@
                         <td width="100%" valign="top" align="left" class="links-color" style="padding-bottom: 9px">
                           <a data-ko-link="middleImage.url">
                             <img data-ko-editable="middleImage.src" border="0" hspace="0" vspace="0" width="166" height="83"
-                              src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C83" class="mobile-full"
+                              src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C83" class="mobile-full attribute-width-166"
                               alt="" style="vertical-align:top; width: 100%; height: auto; -ko-attr-height: @imageHeight;
                               -ko-attr-alt: @middleImage.alt" />
                           </a>
@@ -806,7 +806,7 @@
                         <td width="100%" valign="top" align="left" class="links-color" style="padding-bottom: 9px">
                           <a data-ko-link="rightImage.url">
                             <img data-ko-editable="rightImage.src" border="0" hspace="0" vspace="0" width="166" height="83"
-                              src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C83" class="mobile-full"
+                              src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C83" class="mobile-full attribute-width-166"
                               alt="" style="vertical-align:top; width: 100%; height: auto; -ko-attr-height: @imageHeight;
                               -ko-attr-alt: @rightImage.alt" />
                           </a>
@@ -880,7 +880,7 @@
                         <td width="100%" align="left" class="links-color" style="padding-bottom: 9px">
                           <a data-ko-link="leftImage.url">
                             <img data-ko-editable="leftImage.src" border="0" hspace="0" vspace="0" width="258" height="129"
-                              src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=258%2C129" class="mobile-full"
+                              src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=258%2C129" class="mobile-full attribute-width-258"
                               alt="" style="vertical-align:top; width: 100%; height: auto; -ko-attr-height: @imageHeight;
                               -ko-attr-alt: @leftImage.alt" />
                           </a>
@@ -926,7 +926,7 @@
                         <td width="100%" valign="top" align="left" class="links-color" style="padding-bottom: 9px">
                           <a data-ko-link="rightImage.url">
                             <img data-ko-editable="rightImage.src" border="0" hspace="0" vspace="0" width="258" height="129"
-                              src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=258%2C129" class="mobile-full"
+                              src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=258%2C129" class="mobile-full attribute-width-258"
                               alt="" style="vertical-align:top; width: 100%; height: auto; -ko-attr-height: @imageHeight;
                               -ko-attr-alt: @rightImage.alt" />
                           </a>
@@ -1061,7 +1061,7 @@
             <td valign="top" align="center">
               <a data-ko-link="image.url" href="" style="text-decoration: none;"><img data-ko-editable="image.src"
                   hspace="0" border="0" vspace="0" width="570" data-ko-placeholder-height="285"
-                  src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=570%2C285" class="mobile-full"
+                  src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=570%2C285" class="mobile-full attribute-width-570"
                   alt="" style="max-width: 570px; display: block; border-radius: 0px; width: 100%; height: auto; font-size: 14px;
                   font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
                   -ko-attr-alt: @image.alt;" /></a>
@@ -1073,8 +1073,8 @@
           <tr>
             <td valign="top" align="center">
               <a data-ko-link="image.url" href="" style="text-decoration: none;"><img data-ko-editable="image.src"
-                  hspace="0" border="0" vspace="0" width="//mosaico.io" data-ko-placeholder-height="267"
-                  src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=534%2C267" class="mobile-full"
+                  hspace="0" border="0" vspace="0" width="534" data-ko-placeholder-height="267"
+                  src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=534%2C267" class="mobile-full attribute-width-534"
                   alt="" style="max-width: 534px; display: block; border-radius: 0px; width: 100%; height: auto; font-size: 14px;
                   font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
                   -ko-attr-alt: @image.alt;" /></a>
@@ -1105,7 +1105,7 @@
 <!--[if (gte mso 9)|(lte ie 8)]><td align="left" valign="top" width="285"><![endif]-->
 <div style="display:inline-block; max-width:285px; vertical-align:top; width:100%; width:100%; " class="mobile-full">
               <a data-ko-link="leftImage.url" href="" style="text-decoration: none;"><img data-ko-editable="leftImage.src"
-                  hspace="0" align="left" border="0" vspace="0" width="285" height="142" class="mobile-full"
+                  hspace="0" align="left" border="0" vspace="0" width="285" height="142" class="mobile-full attribute-width-285"
                   src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=285%2C142"
                   alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
                   font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
@@ -1114,7 +1114,7 @@
 <td align="left" valign="top" width="285">
 <![endif]--><div style="display:inline-block; max-width:285px; vertical-align:top; width:100%; width:100%; " class="mobile-full">
               <a data-ko-link="rightImage.url" href="" style="text-decoration: none;"><img data-ko-editable="rightImage.src"
-                  hspace="0" align="right" border="0" vspace="0" width="285" height="142" class="mobile-full"
+                  hspace="0" align="right" border="0" vspace="0" width="285" height="142" class="mobile-full attribute-width-285"
                   src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=285%2C142"
                   alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
                   font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
@@ -1140,7 +1140,7 @@
                     <a data-ko-link="leftImage.url" href="" style="text-decoration: none;">
                       <img data-ko-editable="leftImage.src"
                         hspace="0" align="left" border="0" vspace="0" width="258" height="129"
-                        src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=258%2C129" class="mobile-full"
+                        src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=258%2C129" class="mobile-full attribute-width-258"
                         alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
                         font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
                         -ko-attr-alt: @leftImage.alt;" /></a>
@@ -1157,7 +1157,7 @@
                   <td valign="top">
                     <a data-ko-link="rightImage.url" href="" style="text-decoration: none;"><img data-ko-editable="rightImage.src"
                         hspace="0" align="right" border="0" vspace="0" width="258" height="129"
-                        src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=258%2C129" class="mobile-full"
+                        src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=258%2C129" class="mobile-full attribute-width-258"
                         alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
                         font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
                         -ko-attr-alt: @rightImage.alt;" /></a>
@@ -1195,7 +1195,7 @@
 <!--[if (gte mso 9)|(lte ie 8)]><td align="left" valign="top" width="190"><![endif]-->
 <div style="display:inline-block; max-width:190px; vertical-align:top; width:100%; " class="mobile-full">
               <a data-ko-link="leftImage.url" href="" style="text-decoration: none;"><img data-ko-editable="leftImage.src"
-                  hspace="0" align="left" border="0" vspace="0" width="190" height="95" class="mobile-full"
+                  hspace="0" align="left" border="0" vspace="0" width="190" height="95" class="mobile-full attribute-width-190"
                   src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=190%2C95"
                   alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
                   font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
@@ -1204,7 +1204,7 @@
 <td align="left" valign="top" width="190">
 <![endif]--><div style="display:inline-block; max-width:190px; vertical-align:top; width:100%; " class="mobile-full">
               <a data-ko-link="middleImage.url" href="" style="text-decoration: none;"><img data-ko-editable="middleImage.src"
-                  hspace="0" align="left" border="0" vspace="0" width="190" height="95" class="mobile-full"
+                  hspace="0" align="left" border="0" vspace="0" width="190" height="95" class="mobile-full attribute-width-190"
                   src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=190%2C95"
                   alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
                   font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
@@ -1213,7 +1213,7 @@
 <td align="left" valign="top" width="190">
 <![endif]--><div style="display:inline-block; max-width:190px; vertical-align:top; width:100%; " class="mobile-full">
               <a data-ko-link="rightImage.url" href="" style="text-decoration: none;"><img data-ko-editable="rightImage.src"
-                  hspace="0" align="right" border="0" vspace="0" width="190" height="95" class="mobile-full"
+                  hspace="0" align="right" border="0" vspace="0" width="190" height="95" class="mobile-full attribute-width-190"
                   src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=190%2C95"
                   alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
                   font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
@@ -1238,7 +1238,7 @@
                   <td valign="top">
                     <a data-ko-link="leftImage.url" href="" style="text-decoration: none;"><img data-ko-editable="leftImage.src"
                       hspace="0" align="left" border="0" vspace="0" width="166" height="83"
-                      src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C83" class="mobile-full"
+                      src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C83" class="mobile-full attribute-width-166"
                       alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
                       font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
                       -ko-attr-alt: @leftImage.alt;" /></a>
@@ -1255,7 +1255,7 @@
                   <td valign="top">
                     <a data-ko-link="middleImage.url" href="" style="text-decoration: none"><img data-ko-editable="middleImage.src"
                       hspace="0" align="left" border="0" vspace="0" width="166" height="83"
-                      src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C83" class="mobile-full"
+                      src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C83" class="mobile-full attribute-width-166"
                       alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
                       font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #333333;
                       -ko-attr-alt: @middleImage.alt;" /></a>
@@ -1272,7 +1272,7 @@
                   <td valign="top">
                     <a data-ko-link="rightImage.url" href="" style="text-decoration: none"><img data-ko-editable="rightImage.src"
                       hspace="0" align="right" border="0" vspace="0" width="166" height="83"
-                      src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C83" class="mobile-full"
+                      src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C83" class="mobile-full attribute-width-166"
                       alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
                       font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: -ko-color: @longTextStyle.color;
                       -ko-attr-alt: @rightImage.alt;" /></a>
