--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -416,7 +416,7 @@
                         <td width="100%" valign="top" align="left" style="font-weight: normal; text-align:left; font-size: 14px; padding-bottom: 35px;
                           font-family: 'Open Sans', , Helvetica, sans-serif; color: #ffffff;
                           -ko-color: @linkStyle.color">
-                          <a href="http://citybibleforum.org"><img src="/sites/all/themes/cbootf/logo-email-signature.jpg" alt="City Bible Forum" border="0" /></a>
+                          <a href="http://citybibleforum.org"><img src="/sites/all/themes/cbf2019/logo-email.png" alt="City Bible Forum" border="0" /></a>
                         </td>
                       </tr>
                     </table>
@@ -1327,7 +1327,7 @@
                           data-ko-editable="longText" class="long-text links-color mobile-textcenter">
                           <p>
                             <a href="http://citybibleforum.org">
-                              <img src="/sites/all/themes/cbootf/logo-email-footer.jpg" alt="City Bible Forum" border="0" />
+                              <img src="/sites/all/themes/cbf2019/logo-white-email.png" alt="City Bible Forum" border="0" />
                             </a>
                           </p>
                         </td>
