New theme uses Rubik font

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -414,7 +414,7 @@
                     <table class="vb-content" border="0" cellspacing="9" cellpadding="0" width="276" style="width: 100%;" align="left">
                       <tr>
                         <td width="100%" valign="top" align="left" style="font-weight: normal; text-align:left; font-size: 14px; padding-bottom: 35px;
-                          font-family: 'Open Sans', , Helvetica, sans-serif; color: #ffffff;
+                          font-family: Rubik, , Helvetica, sans-serif; color: #ffffff;
                           -ko-color: @linkStyle.color">
                           <a href="http://citybibleforum.org"><img src="/sites/all/themes/cbf2019/logo-email.png" alt="City Bible Forum" border="0" /></a>
                         </td>
@@ -452,7 +452,7 @@
 
 <!--[if (gte mso 9)|(lte ie 8)]><table align="center" border="0" cellspacing="0" cellpadding="0" width="258" style="-ko-attr-width: @[imageWidth]"><tr><td align="center" valign="top"><![endif]-->
 <div style="display:inline-block; max-width:258px; -ko-max-width: @[imageWidth]px; vertical-align:top; width:100%;" class="mobile-full">
-                    <a data-ko-link="image.url" href="" style="font-size: 18px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #f3f3f3;
+                    <a data-ko-link="image.url" href="" style="font-size: 18px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #f3f3f3;
                       text-decoration: none;
                       -ko-color: @externalTextStyle.color"><img
                        data-ko-editable="image.src" width="258" data-ko-placeholder-height="129"
@@ -511,7 +511,7 @@
 
                     <table class="vb-content" border="0" cellspacing="9" cellpadding="0" width="368" style="width: 100%; -ko-attr-width: @[570 - 2 * 18 - Math.round(imageWidth)]" align="left">
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: bold; font-size: 18px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
+                        <td style="font-weight: 400; font-size: 18px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
                           <span style="color: #02426f" data-ko-editable="titleText">
                           Title
                           </span>
@@ -651,8 +651,8 @@
           style="width: 100%; max-width: 570px; background-color: #1e9dd8;">
           <tr>
             <td bgcolor="#1e9dd8" align="center"
-              style="background-color: #1e9dd8; font-size: 22px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #ffffff; text-align: left;
-              font-weight: bold;
+              style="background-color: #1e9dd8; font-size: 22px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #ffffff; text-align: left;
+              font-weight: 400;
               -ko-attr-align: @bigTitleStyle.align;
               -ko-color: @bigTitleStyle.color;">
               <span data-ko-editable="text">Section Title</span>
@@ -1274,7 +1274,7 @@
                       hspace="0" align="right" border="0" vspace="0" width="166" height="83"
                       src="//mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C83" class="mobile-full attribute-width-166"
                       alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 14px;
-                      font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: -ko-color: @longTextStyle.color;
+                      font-family: Rubik, Arial, Helvetica, sans-serif; color: -ko-color: @longTextStyle.color;
                       -ko-attr-alt: @rightImage.alt;" /></a>
                   </td>
                 </tr>
@@ -1323,7 +1323,7 @@
                     <table class="vb-content" border="0" cellspacing="9" cellpadding="0" width="276" style="width: 100%" align="left">
                       <tr>
                         <td valign="middle" align="left"
-                          style="font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #989898; text-align:left;"
+                          style="font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #989898; text-align:left;"
                           data-ko-editable="longText" class="long-text links-color mobile-textcenter">
                           <p>
                             <a href="http://citybibleforum.org">
@@ -1453,19 +1453,19 @@
             <td valign="top" bgcolor="#ffffff" style="background-color: #ffffff;" align="center">
               <table width="100%" cellspacing="0" cellpadding="0" border="0" style="width:100%;">
                 <tr>
-                  <td align="left" valign="top" style="text-align: left; font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #919191;" class="long-text links-color">
+                  <td align="left" valign="top" style="text-align: left; font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #919191;" class="long-text links-color">
                      &ensp;<br/>
                      &ensp;<br/>
                   </td>
                 </tr>
                 <tr>
-                  <td align="left" valign="top" style="text-align: left; font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #919191;" class="long-text links-color">
+                  <td align="left" valign="top" style="text-align: left; font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #919191;" class="long-text links-color">
                      This email was sent to: {contact.display_name}<br/>
                      <br/>
                      <a href="{action.unsubscribeUrl}">Stop</a> receiving emails on this topic<br/>
                      or <a href="{action.optOutUrl}">never receive</a> bulk emails from us again
                   </td>
-                  <td align="left" valign="top" style="text-align: left; font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #919191;" class="long-text links-color">
+                  <td align="left" valign="top" style="text-align: left; font-size: 14px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #919191;" class="long-text links-color">
                     Head office:<br/>
                     {domain.address}
                   </td>
