New theme uses Rubik font and 'bold' is font-weight 400

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -595,7 +595,7 @@
           </tr>
           <tr><td><table align="left" border="0" cellpadding="0" cellspacing="0" width="100%">
             <tr data-ko-display="titleVisible">
-              <td style="font-weight: bold; font-size: 18px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
+              <td style="font-weight: 400; font-size: 18px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
                 <span style="color: #02426f;" data-ko-editable="text">
                Section Title
                 </span>
@@ -722,7 +722,7 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: bold; font-size: 18px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
+                        <td style="font-weight: 400; font-size: 18px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
                           <span style="color: #02426f;" data-ko-editable="leftTitleText">Title
                           </span>
                         </td>
@@ -767,7 +767,7 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: bold; font-size: 18px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
+                        <td style="font-weight: 400; font-size: 18px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
                           <span style="color: #02426f;"  data-ko-editable="middleTitleText">
                          Title
                           </span>
@@ -813,7 +813,7 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: bold; font-size: 18px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
+                        <td style="font-weight: 400; font-size: 18px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
                           <span style="color: #02426f;" data-ko-editable="rightTitleText">
                          Title
                           </span>
@@ -887,7 +887,7 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: bold; font-size: 18px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
+                        <td style="font-weight: 400; font-size: 18px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
                           <span style="color: #02426f;" data-ko-editable="leftTitleText">
                           Title
                           </span>
@@ -933,7 +933,7 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: bold; font-size: 18px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
+                        <td style="font-weight: 400; font-size: 18px; font-family: Rubik, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
                           <span style="color: #02426f;" data-ko-editable="rightTitleText">
                          Title
                           </span>
