Replace font-weight 400 with bold as we're no longer using Rubik

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -511,7 +511,7 @@
 
                     <table class="vb-content" border="0" cellspacing="9" cellpadding="0" width="368" style="width: 100%; -ko-attr-width: @[570 - 2 * 18 - Math.round(imageWidth)]" align="left">
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: 400; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
+                        <td style="font-weight: bold; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
                           <span style="color: #02426f" data-ko-editable="titleText">
                           Title
                           </span>
@@ -528,11 +528,11 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#0f2e38" align="center" height="26"
-                                style="font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: 400;
+                                style="font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
                                 padding-left: 18px; padding-right: 18px; background-color: #0f2e38; border-radius: 15px; text-transform: uppercase;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color;">
-                                <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: 400;
+                                <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @buttonLink.url">Button</a>
                               </td>
                             </tr>
@@ -595,7 +595,7 @@
           </tr>
           <tr><td><table align="left" border="0" cellpadding="0" cellspacing="0" width="100%">
             <tr data-ko-display="titleVisible">
-              <td style="font-weight: 400; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
+              <td style="font-weight: bold; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
                 <span style="color: #02426f;" data-ko-editable="text">
                Section Title
                 </span>
@@ -618,11 +618,11 @@
                 <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full">
                   <tr>
                     <td width="auto" valign="middle" bgcolor="#0f2e38" align="center" height="26"
-                      style="font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: 400;
+                      style="font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
                       padding-left: 18px; padding-right: 18px; background-color: #0f2e38; border-radius: 15px; text-transform: uppercase;
                       -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                       -ko-color: @buttonStyle.color; ">
-                      <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: 400;
+                      <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
                         -ko-color: @buttonStyle.color; -ko-attr-href: @buttonLink.url">Button</a>
                     </td>
                   </tr>
@@ -652,7 +652,7 @@
           <tr>
             <td bgcolor="#1e9dd8" align="center"
               style="background-color: #1e9dd8; font-size: 22px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #ffffff; text-align: left;
-              font-weight: 400;
+              font-weight: bold;
               -ko-attr-align: @bigTitleStyle.align;
               -ko-color: @bigTitleStyle.color;">
               <span data-ko-editable="text">Section Title</span>
@@ -722,7 +722,7 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: 400; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
+                        <td style="font-weight: bold; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
                           <span style="color: #02426f;" data-ko-editable="leftTitleText">Title
                           </span>
                         </td>
@@ -738,11 +738,11 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#0f2e38" align="center" height="26"
-                                style="font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: 400;
+                                style="font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
                                 padding-left: 18px; padding-right: 18px; background-color: #0f2e38; border-radius: 15px; text-transform: uppercase;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color; ">
-                                <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: 400;
+                                <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @leftButtonLink.url">Button</a>
                               </td>
                             </tr>
@@ -767,7 +767,7 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: 400; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
+                        <td style="font-weight: bold; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
                           <span style="color: #02426f;"  data-ko-editable="middleTitleText">
                          Title
                           </span>
@@ -784,11 +784,11 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#0f2e38" align="center" height="26"
-                                style="font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: 400;
+                                style="font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
                                 padding-left: 18px; padding-right: 18px; background-color: #0f2e38; border-radius: 15px; text-transform: uppercase;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color; ">
-                                <a data-ko-editable="middleButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: 400;
+                                <a data-ko-editable="middleButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @middleButtonLink.url">Button</a>
                               </td>
                             </tr>
@@ -813,7 +813,7 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: 400; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
+                        <td style="font-weight: bold; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
                           <span style="color: #02426f;" data-ko-editable="rightTitleText">
                          Title
                           </span>
@@ -830,11 +830,11 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#0f2e38" align="center" height="26"
-                                style="font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: 400;
+                                style="font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
                                 padding-left: 18px; padding-right: 18px; background-color: #0f2e38; border-radius: 15px; text-transform: uppercase;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color;">
-                                <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: 400;
+                                <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @rightButtonLink.url">Button</a>
                               </td>
                             </tr>
@@ -887,7 +887,7 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: 400; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
+                        <td style="font-weight: bold; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
                           <span style="color: #02426f;" data-ko-editable="leftTitleText">
                           Title
                           </span>
@@ -904,11 +904,11 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px;">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#0f2e38" align="center" height="26"
-                                style="font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: 400;
+                                style="font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
                                 padding-left: 18px; padding-right: 18px; background-color: #0f2e38; border-radius: 15px; text-transform: uppercase;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color; ">
-                                <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: 400;
+                                <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @leftButtonLink.url">Button</a>
                               </td>
                             </tr>
@@ -933,7 +933,7 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: 400; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
+                        <td style="font-weight: bold; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
                           <span style="color: #02426f;" data-ko-editable="rightTitleText">
                          Title
                           </span>
@@ -950,11 +950,11 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px;">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#0f2e38" align="center" height="26"
-                                style="font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: 400;
+                                style="font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
                                 padding-left: 18px; padding-right: 18px; background-color: #0f2e38; border-radius: 15px; text-transform: uppercase;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-color: @buttonStyle.color; ">
-                                <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: 400;
+                                <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @rightButtonLink.url">Button</a>
                               </td>
                             </tr>
@@ -1026,12 +1026,12 @@
               <table cellpadding="0" border="0" align="center" cellspacing="0" class="mobile-full">
                 <tr>
                   <td width="auto" valign="middle" bgcolor="#0f2e38" align="center" height="50"
-                    style="font-size:22px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #ffffff; font-weight: 400;
+                    style="font-size:22px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #ffffff; font-weight: bold;
                     padding-left: 14px; padding-right: 14px; background-color: #0f2e38; border-radius: 4px; text-transform: uppercase;
                     -ko-attr-bgcolor: @bigButtonStyle.buttonColor; -ko-background-color: @bigButtonStyle.buttonColor;
                     -ko-border-radius: @[bigButtonStyle.radius]px;
                     -ko-color: @bigButtonStyle.color; ">
-                    <a data-ko-link="link.url" data-ko-editable="link.text" href="" style="text-decoration: none; color: #ffffff; font-weight: 400;
+                    <a data-ko-link="link.url" data-ko-editable="link.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
                       -ko-color: @bigButtonStyle.color;">Button</a>
                   </td>
                 </tr>
