--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -132,7 +132,7 @@
       socialBlock youUrl { label: YouTube Link}
       socialBlock {
         label: Social Block;
-        properties: socialIconType=colors fbVisible=true fbUrl twVisible=true twUrl ggVisible=true ggUrl webVisible=false webUrl inVisible=false inUrl flVisible=false flUrl viVisible=false viUrl instVisible=false instUrl youVisible=false youUrl longTextStyle longText backgroundColor;
+        properties: socialIconType=colors fbVisible=true fbUrl twVisible=false twUrl ggVisible=false ggUrl webVisible=false webUrl inVisible=true inUrl flVisible=false flUrl viVisible=false viUrl instVisible=false instUrl youVisible=true youUrl longTextStyle longText backgroundColor;
         variant:socialIconType;
         theme: frameTheme
       }
@@ -1340,9 +1340,9 @@
 
                     <table class="vb-content" border="0" cellspacing="9" cellpadding="0" width="276" style="width: 100%" align="right">
                       <tr>
-                        <td align="right" valign="middle" class="links-color socialLinks mobile-textcenter" data-ko-display="socialIconType eq 'colors'">
-                          <span data-ko-display="fbVisible" data-ko-wrap="false">&ensp;</span>
-                          <a data-ko-display="fbVisible" href="" style="-ko-attr-href: @fbUrl">
+                        <td align="right" valign="middle" class="links-color socialLinks mobile-textcenter">
+                          <span>&ensp;</span>
+                          <a href="https://www.facebook.com/CityBibleForum/">
                             <img src="img/social_def/facebook_ok.png" alt="Facebook" border="0" class="socialIcon" />
                           </a>
                           <span data-ko-display="twVisible" data-ko-wrap="false">&ensp;</span>
@@ -1357,8 +1357,8 @@
                           <a data-ko-display="webVisible" href="" style="-ko-attr-href: @webUrl; display: none">
                             <img src="img/social_def/web_ok.png" alt="Web" border="0" class="socialIcon" />
                           </a>
-                          <span data-ko-display="inVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
-                          <a data-ko-display="inVisible" href="" style="-ko-attr-href: @inUrl; display: none">
+                          <span>&ensp;</span>
+                          <a href="https://www.linkedin.com/company/city-bible-forum">
                             <img src="img/social_def/linkedin_ok.png" alt="Linkedin" border="0" class="socialIcon" />
                           </a>
                           <span data-ko-display="flVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
@@ -1373,48 +1373,9 @@
                           <a data-ko-display="instVisible" href="" style="-ko-attr-href: @instUrl; display: none">
                             <img src="img/social_def/instagram_ok.png" alt="Instagram" border="0"  class="socialIcon" />
                           </a>
-                          <span data-ko-display="youVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
-                          <a data-ko-display="youVisible" href="" style="-ko-attr-href: @youUrl; display: none">
+                          <span>&ensp;</span>
+                          <a href="https://www.youtube.com/channel/UCt1YTYKDW8f5s5q9McoHJ_Q">
                             <img src="img/social_def/youtube_ok.png" alt="Youtube" border="0" class="socialIcon" />
-                          </a>
-                        </td>
-                        <td align="right" valign="middle" class="links-color socialLinks mobile-textcenter" data-ko-display="socialIconType eq 'bw'"
-                          style="display: none">
-                          <span data-ko-display="fbVisible" data-ko-wrap="false">&ensp;</span>
-                          <a data-ko-display="fbVisible" href="" style="-ko-attr-href: @fbUrl">
-                            <img src="img/social_def/facebook_bw_ok.png" alt="Facebook" border="0" class="socialIcon" />
-                          </a>
-                          <span data-ko-display="twVisible" data-ko-wrap="false">&ensp;</span>
-                          <a data-ko-display="twVisible" href="" style="-ko-attr-href: @twUrl">
-                            <img src="img/social_def/twitter_bw_ok.png" alt="Twitter" border="0" class="socialIcon" />
-                          </a>
-                          <span data-ko-display="ggVisible" data-ko-wrap="false">&ensp;</span>
-                          <a data-ko-display="ggVisible" href="" style="-ko-attr-href: @ggUrl">
-                            <img src="img/social_def/google+_bw_ok.png" alt="Google+" border="0" class="socialIcon" />
-                          </a>
-                          <span data-ko-display="webVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
-                          <a data-ko-display="webVisible" href="" style="-ko-attr-href: @webUrl; display: none">
-                            <img src="img/social_def/web_bw_ok.png" alt="Web" border="0" class="socialIcon" />
-                          </a>
-                          <span data-ko-display="inVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
-                          <a data-ko-display="inVisible" href="" style="-ko-attr-href: @inUrl; display: none">
-                            <img src="img/social_def/linkedin_bw_ok.png" alt="Linkedin" border="0" class="socialIcon" />
-                          </a>
-                          <span data-ko-display="flVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
-                          <a data-ko-display="flVisible" href="" style="-ko-attr-href: @flUrl; display: none">
-                            <img src="img/social_def/flickr_bw_ok.png" alt="Flickr" border="0" class="socialIcon" />
-                          </a>
-                          <span data-ko-display="viVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
-                          <a data-ko-display="viVisible" href="" style="-ko-attr-href: @viUrl; display: none">
-                            <img src="img/social_def/vimeo_bw_ok.png" alt="Vimeo" border="0" class="socialIcon" />
-                          </a>
-                          <span data-ko-display="instVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
-                          <a data-ko-display="instVisible" href="" style="-ko-attr-href: @instUrl; display: none">
-                            <img src="img/social_def/instagram_bw_ok.png" alt="Instagram" border="0"  class="socialIcon" />
-                          </a>
-                          <span data-ko-display="youVisible" data-ko-wrap="false" style="display: none">&ensp;</span>
-                          <a data-ko-display="youVisible" href="" style="-ko-attr-href: @youUrl; display: none">
-                            <img src="img/social_def/youtube_bw_ok.png" alt="Youtube" border="0" class="socialIcon" />
                           </a>
                         </td>
                       </tr>
