--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -414,7 +414,7 @@
                     <table class="vb-content" border="0" cellspacing="9" cellpadding="0" width="276" style="width: 100%;" align="left">
                       <tr>
                         <td width="100%" valign="top" align="left" style="font-weight: normal; text-align:left; font-size: 14px; padding-bottom: 35px;
-                          font-family: Calibri, , Helvetica, sans-serif; color: #ffffff;
+                          font-family: Calibri, Arial, Helvetica, sans-serif; color: #ffffff;
                           -ko-color: @linkStyle.color">
                           <a href="http://citybibleforum.org"><img src="/sites/all/themes/cbf2019/logo-email.png" alt="City Bible Forum" border="0" /></a>
                         </td>
